@@ -1,5 +1,6 @@
 Changes for 1.1.5:
 
+ - fixed agent's calculation of network statistics (Alexei)
  - fixed some compilation warnings (Alexei)
  - fixed "not equal" condition for hosts and host groups in actions (Alexei)
  - added support of macro TRIGGER.URL and TRIGGER.COMMENT (Alexei)
